--- a/opti-sphere/stylesheet.css
+++ b/opti-sphere/stylesheet.css
@@ -6,11 +6,7 @@ QLabel#header {
     font-size: 30px;
     font-weight: bold;
     font-family: Arial;
-    margin-bottom: 5px;
-}
-
-QPushButton#video_control_btn{
-    background: blue;
+    margin-bottom: 10px;
 }
 
 QMainWindow, QTabWidget::pane, QDialog{
@@ -51,7 +47,7 @@ QGraphicsView{
     background: #151415;
 }
 
-CaptureWidget#widget-container{
+QWidget#widget-container{
     background-color: #201F20; 
     border-radius: 10px;
 }
@@ -96,6 +92,7 @@ QTabWidget#control-tabs::tab-bar{
 QLabel#legend{
     color: #CCCCCC;
     font-weight: 300;
+    font-size: 14px;
 }
 
 QSlider::groove:horizontal {
@@ -140,7 +137,7 @@ QPushButton#apply-rot-btn:hover{
 
 QPushButton#apply-rot-btn:disabled{
     height: 28px;
-    background: hsl(0, 0%, 18%);
+    background: hsl(0, 0%, 17%);
     border-radius: 10px;
     color: hsl(0, 0%, 50%);
 }
@@ -153,19 +150,48 @@ QSpinBox{
     padding: 5px;
 }
 
-QSpinBox::up-button, QSpinBox::down-button{
-    width: 15px;
-    height: 15px;
-    color: #105BF6;
+QSpinBox::up-button{
+    border-image: url("resources/icons/caret-up-icon.svg");
+    margin-top: 3px;
+    margin-right: 5px;
+}
+QSpinBox::down-button{
+    border-image: url("resources/icons/caret-down-icon.svg");
+    margin-right: 5px;
+    margin-bottom: 3px
 }
 
-/* QSpingBox::up-arrow{
-    width: 12px;
-    height: 12px;
-    image: url("resources/icons/caret-up-icon.svg")
+*{
+    selection-background-color: #5e5e5e;
 }
-QSpingBox::down-arrow{
-    width: 12px;
-    height: 12px;
-    image: url("resources/icons/caret-down-icon.svg")
-} */
+
+QWidget#details{
+    background: hsl(0, 0%, 17%);
+    border-radius: 11px;
+    border: 1px solid hsl(0, 0, 60%);
+}
+
+QWidget#details QLabel{
+    color: hsl(0, 0, 60%);
+    font-size: 14px;
+    font-weight: 300;
+    font-style: italic;
+}
+
+QLineEdit#name{
+    background-color: hsl(0, 0, 17%); /* Background color of the QLineEdit */
+    padding: 5px; /* Padding inside the QLineEdit */
+    color: #fff;
+    font-size: 16px; /* Font size */
+    border-radius: 10px;
+}
+
+QLineEdit#name:focus {
+    border: 2px solid #105BF6; /* Border color when the QLineEdit is focused */
+}
+
+QPushButton#video_control_btn{
+    background: transparent;
+    height: 30px;
+    width: 30px;
+}
