--- a/opti-sphere/resources/stylesheet.css
+++ b/opti-sphere/resources/stylesheet.css
@@ -159,12 +159,12 @@ QSpinBox, QDoubleSpinBox{
 }
 
 QSpinBox::up-button, QDoubleSpinBox::up-button{
-    border-image: url("icons/caret-up-icon.svg");
+    border-image: url("resources/icons/caret-up-icon.svg");
     margin-top: 3px;
     margin-right: 5px;
 }
 QSpinBox::down-button, QDoubleSpinBox::down-button{
-    border-image: url("icons/caret-down-icon.svg");
+    border-image: url("resources/icons/caret-down-icon.svg");
     margin-right: 5px;
     margin-bottom: 3px
 }
@@ -204,8 +204,58 @@ QPushButton#video_control_btn{
     width: 30px;
 }
 
+QCheckBox#switch::indicator{
+    width: 30px;
+    height: 19px;
+    border-radius: 9px;
+    /* padding: 2px; */
 
+}
 
+QCheckBox#switch::indicator:unchecked{
+    image: url(resources/icons/toggle-off-icon.svg);
+}
+QCheckBox#switch::indicator:hover{
+    background-color: hsl(0, 0%, 31%);
+}
+
+QCheckBox#switch::indicator:checked{
+    image: url(resources/icons/toggle-on-icon.svg);
+}
+
+QComboBox {
+    border-radius: 10px;
+    background-color: hsl(0, 0, 24%);
+    padding: 5px;
+    padding-left: 10px;
+    color: white;
+    border-style: none;
+}
+
+QComboBox::drop-down {
+    width: 25px;
+    border: none;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+QComboBox::drop-down:on {
+    background-color: hsl(0, 0%, 17%);
+    width: 25px;
+}
+
+QComboBox::down-arrow {
+    image: url(resources/icons/caret-down-icon.svg);
+    width: 25;
+}
+
+QComboBox QAbstractItemView{
+    background-color: hsl(0, 0, 17%);
+    selection-color: white;
+    margin: 0;
+    padding: 0;
+    border-radius: 5px;
+}
 
 
 
